# ameth

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
blueprints/: admin.py  discord.py
templates/: dupe.html  manage.html  success.html  welcome.html
utils/: dict.py
