[tool.poetry]
name = "ameth"
version = "0"
description = "Authentication for the PriConne Mapping project"
authors = ["tilda <me@til.pm>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Authlib = "^1.2.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
peewee = "^3.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
